--- a/index.html
+++ b/index.html
@@ -3,10 +3,43 @@
 <html>
 <head>
 	<title>hoppfull</title><meta charset="UTF-8"/>
+  
+  <script src="./js/code-highlight.js"></script>
+  <script src="./js/jquery-2.1.3-min.js"></script>
+  
+  <link rel="stylesheet" href="css/code-obsidian.css"/>
+  
+  <link rel="stylesheet" href="css/main.css"/>
+  <script src="main.js"></script>
 </head>
 <body>
 
-tjening
+Test code:
+<pre><code class="csharp code"
+>namespace MyNamespace {
+  class MyClass {
+    static void Main(string[] args) {
+      Console.WriteLine("hello world!");
+    }
+  }
+}</code></pre>
 
+Test console:
+
+<div class="cmd_console code"
+>C:\> fsi
+
+Microsoft (R) F# Interactive version 12.0.21005.1
+Copyright (C) Microsoft Corporation. All Rights Reserved.
+
+For help type #help;;
+
+> _</div>
+
+<script>
+$('pre code').each(function(i, block) {
+  hljs.highlightBlock(block);
+});
+</script>
 </body>
 </html>
