--- a/index.html
+++ b/index.html
@@ -13,28 +13,12 @@
   <script src="main.js"></script>
 </head>
 <body>
+<h3>Tutorials:</h3>
+<ul>
+<li><a href="ex01.html" class="mylink">ex01 - Variabler</a></li>
+<li><a href="ex02.html" class="mylink">ex02 - Arrayer</a></li>
 
-Test code:
-<pre><code class="csharp code"
->namespace MyNamespace {
-  class MyClass {
-    static void Main(string[] args) {
-      Console.WriteLine("hello world!");
-    }
-  }
-}</code></pre>
-
-Test console:
-
-<div class="cmd_console code"
->C:\> fsi
-
-Microsoft (R) F# Interactive version 12.0.21005.1
-Copyright (C) Microsoft Corporation. All Rights Reserved.
-
-For help type #help;;
-
-> _</div>
+</ul>
 
 <script>
 $('pre code').each(function(i, block) {
