added more pages
yay

--- a/ex01.html
+++ b/ex01.html
@@ -18,7 +18,7 @@
 <p>En variabel är en behållare för ett föremål, t.ex en siffra eller en
 textsträng.</p>
 
-<h3>ex01:</h3>
+<h3>ex a:</h3>
 <pre><code class="csharp code"
 >int mynumber = 5;</code></pre>
 
@@ -29,7 +29,7 @@ Här händer ett flertal saker på en gång:
 <li>Heltalet <i>5</i> lagras i minnesplatsen</li>
 </ol>
 
-<h3>ex02:</h3>
+<h3>ex b:</h3>
 <pre><code class="csharp code"
 >string mytext = "tjena";</code></pre>
 
@@ -40,11 +40,11 @@ Här händer ett flertal saker på en gång:
 </ol>
 
 För att åkalla en variabel, använd namnet på den:
-<h3>ex03:</h3>
+<h3>ex c:</h3>
 <pre><code class="csharp code"
 >Console.WriteLine(mytext);  // printar ut innehållet i minnesplatsen för mytext</code></pre>
 
-<h3>ex04:</h3>
+<h3>ex d:</h3>
 <pre><code class="csharp code"
 >int x = mynumber;</code></pre>
 <ol>
@@ -54,6 +54,7 @@ För att åkalla en variabel, använd namnet på den:
 <li>Det hämtade värdet tilldelas till x</li>
 </ol>
 
+<a href="index.html" class="mylink">Hem</a>
 <script>
 $('pre code').each(function(i, block) {
   hljs.highlightBlock(block);
