--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
 <ul>
 <li><a href="ex01.html" class="mylink">ex01 - Variabler</a></li>
 <li><a href="ex02.html" class="mylink">ex02 - Arrayer</a></li>
+<li><a href="ex03.html" class="mylink">ex03 - Implicit typ</a></li>
+<li><a href="ex04.html" class="mylink">ex04 - if-sats</a></li>
 
 </ul>
 
