fixed error in code
changed int[] myarray = new array[5]; to int[] myarray = new int[5];

--- a/ex02.html
+++ b/ex02.html
@@ -20,7 +20,7 @@ namn</p>
 
 <h3>ex a:</h3>
 <pre><code class="csharp code"
->int[] myarray = new array[5];</code></pre>
+>int[] myarray = new int[5];</code></pre>
 
 Här händer ett flertal saker på en gång:
 <ol>
